# img4avif

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
benches/: lambda_bench.rs
examples/: TestSite.mhtml  convert_examples.rs  poc.rs
examples/fixtures/invalid/: longhorn-beetle-crimson-desert-stats.avif
poc/: RESULTS.md
poc/output/: football_1080p.avif  kayak1_original.avif  kayak2_1080p.avif  wikipedia_logo_original.avif
src/: config.rs  error.rs  lib.rs  logging.rs  memory_guard.rs  metadata.rs  resize.rs
src/decoder/: jpeg.rs  mod.rs  png.rs  webp.rs
src/encoder/: mod.rs  rav1e_wrapper.rs
tests/: fixture_timing.rs  fixtures.rs  integration.rs  memory_stress.rs  wasm_fixture_conversion.rs
tests/wasm/: mobile.spec.js  package.json  playwright.config.js
