[package]
name = "img2avif"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Canter-Equine"]
description = "Serverless-optimized image conversion: JPEG/PNG/WebP/HEIC → AVIF with HDR10 input support (pure Rust, Lambda-ready)"
license = "Apache-2.0"
readme = "README.md"
keywords = ["avif", "image", "convert", "heic", "hdr"]
categories = ["multimedia::images", "encoding"]
repository = "https://github.com/Canter-Equine/img2avif"
documentation = "https://docs.rs/img2avif"
exclude = ["/tests/fixtures", "/benches", "/fuzz"]

[features]
default = []

# Structured pipeline logging via the `log` crate facade.
#
# When enabled, `img2avif` emits log records at every major pipeline stage
# (input size check, metadata strip, decode, memory guard, encode, output
# validation).  Install any `log`-compatible subscriber (e.g. `env_logger`,
# `tracing-log`, `simplelog`) in your application to consume these records.
#
# This feature has **zero runtime cost** when disabled: the log macro calls
# are removed entirely by the compiler.  It is safe to enable in production
# if you want observability, but is off by default to keep Lambda cold-start
# times minimal.
#
# Usage:
#
#   [dependencies]
#   img2avif = { version = "0.1", features = ["dev-logging"] }
#
# Then in your application initialise a subscriber, e.g.:
#
#   env_logger::init(); // RUST_LOG=img2avif=debug cargo run
dev-logging = ["dep:log"]

# ⚠️  EXPERIMENTAL: HEIC/HEIF support requires the libheif C library at link time.
# This violates the "no C dependencies" constraint and is unsuitable for stock
# Lambda layers.  Enable only when you control the runtime environment.
#
# ⚠️  LICENSE NOTE: libheif is LGPL-licensed.  Linking it makes your final
# binary LGPL-encumbered.  Review your distribution obligations before enabling
# this feature in a commercial product.
heic-experimental = ["dep:libheif-rs"]

# ⚠️  EXPERIMENTAL: RAW camera format support (pure Rust via rawloader).
# API and output quality are not production-ready.
raw-experimental = ["dep:rawloader"]

[dependencies]
thiserror = "2.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ravif = { version = "0.13", default-features = false, features = ["threading"] }
rgb = "0.8"
img-parts = "0.3"

# Optional logging facade — used only when the `dev-logging` feature is on.
log = { version = "0.4", optional = true }

# Experimental optional dependencies (see feature docs above).
libheif-rs = { version = "1.0", optional = true }
rawloader = { version = "0.37", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25", features = ["jpeg", "png"] }

[profile.release]
opt-level = "z"      # minimise binary size
lto = true           # link-time optimisation
codegen-units = 1    # maximise LTO effectiveness
strip = true         # strip debug symbols from binary
panic = "abort"      # smaller binary, no unwinding overhead

[[bench]]
name = "lambda_bench"
harness = false
