[package]
name = "imagine-avif"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
authors = ["Canter-Equine"]
description = "Serverless-optimized image conversion: JPEG/PNG/WebP/HEIC → AVIF with HDR10 input support (pure Rust, Lambda-ready)"
license = "Apache-2.0"
readme = "README.md"
keywords = ["avif", "image", "convert", "heic", "hdr"]
categories = ["multimedia::images", "encoding"]
repository = "https://github.com/Canter-Equine/imagine-avif"
documentation = "https://docs.rs/imagine-avif"
exclude = ["/tests/fixtures", "/examples/fixtures", "/benches", "/fuzz"]

# rlib  – Rust-to-Rust linking (tests, examples, downstream crates).
# cdylib – produces a `.wasm` binary when targeting wasm32-unknown-unknown,
#           enabling the Playwright mobile-browser tests in tests/wasm/.
[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []

# Structured pipeline logging via the `log` crate facade.
#
# When enabled, `imagine-avif` emits log records at every major pipeline stage
# (input size check, metadata strip, decode, memory guard, encode, output
# validation).  Install any `log`-compatible subscriber (e.g. `env_logger`,
# `tracing-log`, `simplelog`) in your application to consume these records.
#
# This feature has **zero runtime cost** when disabled: the log macro calls
# are removed entirely by the compiler.  It is safe to enable in production
# if you want observability, but is off by default to keep Lambda cold-start
# times minimal.
#
# Usage:
#
#   [dependencies]
#   imagine-avif = { version = "0.5", features = ["dev-logging"] }
#
# Then in your application initialise a subscriber, e.g.:
#
#   env_logger::init(); // RUST_LOG=imagine_avif=debug cargo run
dev-logging = ["dep:log"]

# ⚠️  EXPERIMENTAL: HEIC/HEIF support requires the libheif C library at link time.
# This violates the "no C dependencies" constraint and is unsuitable for stock
# Lambda layers.  Enable only when you control the runtime environment.
#
# ⚠️  LICENSE NOTE: libheif is LGPL-licensed.  Linking it makes your final
# binary LGPL-encumbered.  Review your distribution obligations before enabling
# this feature in a commercial product.
heic-experimental = ["dep:libheif-rs"]

# ⚠️  EXPERIMENTAL: RAW camera format support (pure Rust via rawloader).
# API and output quality are not production-ready.
raw-experimental = ["dep:rawloader"]

[dependencies]
thiserror = "2.0"
# Pinned to preserve the declared Rust 1.85 MSRV until a newer compatible patch exists.
image = { version = "=0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
rgb = "0.8"
img-parts = "0.3"

# Optional logging facade — used only when the `dev-logging` feature is on.
log = { version = "0.4", optional = true }

# Experimental optional dependencies (see feature docs above).
libheif-rs = { version = "1.0", optional = true }
rawloader = { version = "0.37", optional = true }

# ravif with multi-threading for native targets.
# wasm32-unknown-unknown uses the no-threading variant below (rayon is not
# available in that environment).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ravif = { version = "0.13", default-features = false, features = ["threading"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ravif = { version = "0.13", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "=0.25.9", features = ["jpeg", "png"] }

[profile.release]
opt-level = "z"      # minimise binary size
lto = true           # link-time optimisation
codegen-units = 1    # maximise LTO effectiveness
strip = true         # strip debug symbols from binary
panic = "abort"      # smaller binary, no unwinding overhead

[[bench]]
name = "lambda_bench"
harness = false

[[example]]
name = "poc"
# The example uses `image` (a dev-dependency) to generate synthetic test images.
# It does not require any additional feature flags to run.

[[example]]
name = "convert_examples"
# Converts every file in examples/ to AVIF, writing outputs to examples/out/.
# Valid image formats (JPEG, PNG, WebP) succeed; non-image files (.rs, .mhtml,
# .avif) fail safely at format-detection with a descriptive error.
